b=406782, double rendering of bullets on wikimo, r+sr=roc